--- a/S07_2_explanation_word2vec.ipynb
+++ b/S07_2_explanation_word2vec.ipynb
@@ -124,7 +124,7 @@
         {
           "data": {
             "text/plain": [
-              "0.2294267"
+              "0.22942671"
             ]
           },
           "execution_count": 5,
@@ -146,7 +146,7 @@
         {
           "data": {
             "text/plain": [
-              "0.09978465"
+              "0.09978464"
             ]
           },
           "execution_count": 6,
@@ -168,7 +168,7 @@
         {
           "data": {
             "text/plain": [
-              "0.99999994"
+              "1.0"
             ]
           },
           "execution_count": 7,
@@ -199,11 +199,11 @@
         {
           "data": {
             "text/plain": [
-              "[('monarch', 0.7042065858840942),\n",
-              " ('kings', 0.6780861020088196),\n",
-              " ('princess', 0.6731551885604858),\n",
-              " ('queens', 0.6679496765136719),\n",
-              " ('prince', 0.6435247659683228)]"
+              "[('monarch', 0.7042067050933838),\n",
+              " ('kings', 0.6780860424041748),\n",
+              " ('princess', 0.6731550097465515),\n",
+              " ('queens', 0.667949914932251),\n",
+              " ('prince', 0.643524706363678)]"
             ]
           },
           "execution_count": 8,
@@ -225,11 +225,11 @@
         {
           "data": {
             "text/plain": [
-              "[('carrots', 0.7536594271659851),\n",
-              " ('tomatoes', 0.7129638195037842),\n",
+              "[('carrots', 0.7536595463752747),\n",
+              " ('tomatoes', 0.7129637002944946),\n",
               " ('celery', 0.7025030851364136),\n",
-              " ('broccoli', 0.6796351075172424),\n",
-              " ('cherry_tomatoes', 0.6629275679588318)]"
+              " ('broccoli', 0.6796351671218872),\n",
+              " ('cherry_tomatoes', 0.6629276275634766)]"
             ]
           },
           "execution_count": 9,
@@ -397,7 +397,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
@@ -411,7 +411,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.6"
+      "version": "3.11.5"
     }
   },
   "nbformat": 4,
