--- a/S08_1_exercises_before.ipynb
+++ b/S08_1_exercises_before.ipynb
@@ -1040,37 +1040,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\manue\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\manue\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     C:\\Users\\manue\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import nltk\n",
     "from nltk.tokenize import word_tokenize \n",
     "from nltk.corpus import stopwords\n",
-    "from nltk.stem import PorterStemmer\n",
+    "from nltk.stem import PorterStemmer, WordNetLemmatizer\n",
     "\n",
     "#nltk.download('punkt') Ejecutar cuando no se tenga\n",
     "#nltk.download('stopwords')\n",
     "#nltk.download('wordnet')\n",
     "\n",
     "stemmer = PorterStemmer()\n",
+    "lemmatizer = WordNetLemmatizer()\n",
     "stop_words = set(stopwords.words('english'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>clean_prompt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Can I send an email, please?</td>\n",
+       "      <td>send email , please ?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>I'd like to compose an email.</td>\n",
+       "      <td>'d like compose email .</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>I need to send an email.</td>\n",
+       "      <td>need send email .</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Could you help me write an email?</td>\n",
+       "      <td>could help write email ?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Is it possible to send an email with you?</td>\n",
+       "      <td>possible send email ?</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      prompt              clean_prompt\n",
+       "0               Can I send an email, please?     send email , please ?\n",
+       "1              I'd like to compose an email.   'd like compose email .\n",
+       "2                   I need to send an email.         need send email .\n",
+       "3          Could you help me write an email?  could help write email ?\n",
+       "4  Is it possible to send an email with you?     possible send email ?"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def preprocess_text(text):\n",
+    "    tokens = word_tokenize(text.lower())\n",
+    "    \n",
+    "    remove_stop= []\n",
+    "    clean_words=[]\n",
+    "    \n",
+    "    for word in tokens:\n",
+    "        if word.lower() not in stop_words:\n",
+    "            remove_stop.append(word)\n",
+    "            \n",
+    "    for word in remove_stop:\n",
+    "        lemma = lemmatizer.lemmatize(word)\n",
+    "        clean_words.append(lemma)\n",
+    "        \n",
+    "    return \" \".join(clean_words)\n",
+    "\n",
+    "\n",
+    "df['clean_prompt']= df['prompt'].apply(preprocess_text)\n",
+    "\n",
+    "df[['prompt', 'clean_prompt']].head()"
    ]
   }
  ],
