--- a/S08_1_exercises_before.ipynb
+++ b/S08_1_exercises_before.ipynb
@@ -1154,6 +1154,15 @@
     "\n",
     "df[['prompt', 'clean_prompt']].head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(df['clean_prompt'], df['label'], test_size=0.2, random_state=42)"
+   ]
   }
  ],
  "metadata": {
