Part 1 S08 regex functions

--- a/S08_1_exercises_before.ipynb
+++ b/S08_1_exercises_before.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
    ],
    "source": [
     "import re\n",
-    "from collections import Counter\n",
+    "from collections import defaultdict\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1127,7 @@
        "4  Is it possible to send an email with you?     possible send email ?"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,11 +1157,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(df['clean_prompt'], df['label'], test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>label</th>\n",
+       "      <th>predict</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Can I send an email, please?</td>\n",
+       "      <td>send</td>\n",
+       "      <td>send</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>I'd like to compose an email.</td>\n",
+       "      <td>send</td>\n",
+       "      <td>send</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>I need to send an email.</td>\n",
+       "      <td>send</td>\n",
+       "      <td>send</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Could you help me write an email?</td>\n",
+       "      <td>send</td>\n",
+       "      <td>send</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Is it possible to send an email with you?</td>\n",
+       "      <td>send</td>\n",
+       "      <td>send</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      prompt label predict\n",
+       "0               Can I send an email, please?  send    send\n",
+       "1              I'd like to compose an email.  send    send\n",
+       "2                   I need to send an email.  send    send\n",
+       "3          Could you help me write an email?  send    send\n",
+       "4  Is it possible to send an email with you?  send    send"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def classify_email_regex(text): #Palabras clave para clasificar los correos electronicos\n",
+    "    send_keywords = ['send', 'compose', 'draft', 'write', 'respond', 'reply']\n",
+    "    list_keywords = ['list', 'show', 'display', 'view', 'inbox']\n",
+    "    trash_keywords = ['delete', 'trash', 'remove', 'erase']\n",
+    "    untrash_keywords = ['recover', 'restore', 'undelete', 'untrash']\n",
+    "    forward_keywords = ['forward', 'share', 'send on']\n",
+    "    star_keywords = ['star', 'important', 'highlight', 'prioritize']\n",
+    "    read_keywords = ['read', 'hear', 'narrate', 'tell']\n",
+    "    trash_list_keywords = ['trash list', 'deleted emails', 'trash folder']\n",
+    "\n",
+    "    if any(re.search(keyword, text) for keyword in send_keywords):\n",
+    "        return 'send'\n",
+    "    elif any(re.search(keyword, text) for keyword in list_keywords):\n",
+    "        return 'list'\n",
+    "    elif any(re.search(keyword, text) for keyword in trash_keywords):\n",
+    "        return 'trash'\n",
+    "    elif any(re.search(keyword, text) for keyword in untrash_keywords):\n",
+    "        return 'untrash'\n",
+    "    elif any(re.search(keyword, text) for keyword in forward_keywords):\n",
+    "        return 'forward'\n",
+    "    elif any(re.search(keyword, text) for keyword in star_keywords):\n",
+    "        return 'star'\n",
+    "    elif any(re.search(keyword, text) for keyword in read_keywords):\n",
+    "        return 'read'\n",
+    "    elif any(re.search(keyword, text) for keyword in trash_list_keywords):\n",
+    "        return 'trash_list'\n",
+    "    else:\n",
+    "        return 'unknown'\n",
+    "    \n",
+    "df['predict'] = df['clean_prompt'].apply(classify_email_regex)\n",
+    "\n",
+    "df[['prompt','label','predict']].head()\n"
    ]
   }
  ],
