Complete measure for the first one

--- a/S08_1_exercises_before.ipynb
+++ b/S08_1_exercises_before.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1031,6 +1031,7 @@
     "from collections import defaultdict\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
     "\n",
     "df= pd.read_csv('dataset_emails.csv')\n",
     "\n",
@@ -1040,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1128,7 @@
        "4  Is it possible to send an email with you?     possible send email ?"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1166,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1240,7 @@
        "4  Is it possible to send an email with you?  send    send"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1277,6 +1278,56 @@
     "df['predict'] = df['clean_prompt'].apply(classify_email_regex)\n",
     "\n",
     "df[['prompt','label','predict']].head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of the model:0.44\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "     forward       0.94      0.65      0.77       100\n",
+      "        list       0.44      0.63      0.52       100\n",
+      "        read       0.76      0.55      0.64       100\n",
+      "       reply       0.00      0.00      0.00       100\n",
+      "        send       0.29      0.56      0.38       100\n",
+      "        star       0.88      0.74      0.80       100\n",
+      "       trash       0.32      0.57      0.41       100\n",
+      "  trash_list       0.00      0.00      0.00       100\n",
+      "     unknown       0.27      0.71      0.40       100\n",
+      "     untrash       1.00      0.03      0.06       100\n",
+      "\n",
+      "    accuracy                           0.44      1000\n",
+      "   macro avg       0.49      0.44      0.40      1000\n",
+      "weighted avg       0.49      0.44      0.40      1000\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\manue\\Anaconda\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1469: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\Users\\manue\\Anaconda\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1469: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\Users\\manue\\Anaconda\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1469: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy = accuracy_score(df['label'], df['predict'])\n",
+    "print(f\"Accuracy of the model:{accuracy:.2f}\")\n",
+    "\n",
+    "print(\"Classification Report:\\n\", classification_report(df['label'], df['predict']))"
    ]
   }
  ],
