--- a/S08_1_exercises_before.ipynb
+++ b/S08_1_exercises_before.ipynb
@@ -1166,6 +1166,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Regex classifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -1328,6 +1335,77 @@
     "print(f\"Accuracy of the model:{accuracy:.2f}\")\n",
     "\n",
     "print(\"Classification Report:\\n\", classification_report(df['label'], df['predict']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Naive-Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.725\n",
+      "Log Accuracy: [[ -4.76572995  -5.10283605  -7.17770293 ...  -2.01422211 -11.46593038\n",
+      "   -0.37309929]\n",
+      " [ -7.46076321  -6.77536555  -7.0236025  ...  -8.42154779  -7.84623443\n",
+      "   -6.9356258 ]\n",
+      " [ -3.32866778  -3.12484375  -3.22042721 ...  -3.31961354  -3.18015331\n",
+      "   -3.32046997]\n",
+      " ...\n",
+      " [ -2.90905201  -2.38986643  -2.64073381 ...  -1.04545866  -3.98965254\n",
+      "   -2.00316384]\n",
+      " [ -0.0900798   -4.36402414  -4.61226109 ...  -5.3170592   -6.1280402\n",
+      "   -4.11881928]\n",
+      " [ -0.86476382  -3.25464973  -3.71224588 ...  -5.05371517  -7.05770818\n",
+      "   -3.59177368]]\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "     forward       0.93      1.00      0.96        25\n",
+      "        list       0.54      0.54      0.54        13\n",
+      "        read       0.80      0.76      0.78        21\n",
+      "       reply       0.70      0.93      0.80        15\n",
+      "        send       0.65      0.55      0.59        20\n",
+      "        star       0.68      1.00      0.81        13\n",
+      "       trash       0.84      0.59      0.70        27\n",
+      "  trash_list       0.66      0.91      0.76        23\n",
+      "     unknown       0.73      0.38      0.50        21\n",
+      "     untrash       0.64      0.64      0.64        22\n",
+      "\n",
+      "    accuracy                           0.73       200\n",
+      "   macro avg       0.72      0.73      0.71       200\n",
+      "weighted avg       0.73      0.72      0.71       200\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "\n",
+    "vectorizer = CountVectorizer()\n",
+    "X_train_vec = vectorizer.fit_transform(X_train) #vectorizamos los datos de Xtrain y Xtest en vectores de características para representar la Bag-of-words \n",
+    "X_test_vec = vectorizer.transform(X_test)#Con las transformaciones se crea una matriz numérica (dispersa) que representa los textos en forma numérica\n",
+    "# Se hace lo mismo en los datos de test para asegurar la consistencia con los datos de entrenamiento\n",
+    "clf = MultinomialNB(alpha=1.0)#Implementación de Naive Bayes Multinomial, el alpha es el suavizado de Lapace para evitar las probabilidades de 0\n",
+    "clf.fit(X_train_vec, y_train)#Entrenamiento de la NBM\n",
+    "\n",
+    "predictions = clf.predict(X_test_vec)\n",
+    "log_probs = clf.predict_log_proba(X_test_vec)\n",
+    "\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, predictions))\n",
+    "print(\"Log Accuracy:\", (log_probs))\n",
+    "print(\"Classification Report:\\n\", classification_report(y_test, predictions))\n",
+    "\n"
    ]
   }
  ],
