--- a/S08_1_exercises_before.ipynb
+++ b/S08_1_exercises_before.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1128,7 @@
        "4  Is it possible to send an email with you?     possible send email ?"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1247,7 @@
        "4  Is it possible to send an email with you?  send    send"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1289,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1406,6 +1406,125 @@
     "print(\"Log Accuracy:\", (log_probs))\n",
     "print(\"Classification Report:\\n\", classification_report(y_test, predictions))\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Spacy 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy\n",
+    "nlp = spacy.load('en_core_web_sm')#Modelo en inglés"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convertir los datos al formato de Spacy\n",
+    "train_data = list(zip(X_train, [{\"cats\": {label: label == true_label for label in df['label'].unique()}} for true_label in y_train]))\n",
+    "test_data = list(zip(X_test, [{\"cats\": {label: label == true_label for label in df['label'].unique()}} for true_label in y_test]))\n",
+    "#En los dos sigue el mismo procedimiento. Para cada etiqueta única de Label se crea una entrada en el diccionario donde la clave es la etiqueta(label) y el valor es true si es igual a la etiqueta verdadera(true label) del texto, \n",
+    "#es decir que solo si el texto está categorizado con la misma etiqueta se pone que es de esa etiqueta. Y cats en spaCy, las categorías (etiquetas) se guardan bajo la clave \"cats\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = spacy.blank(\"en\")#Pipeline vacio para inglés\n",
+    "textcat = nlp.add_pipe(\"textcat\") #Añadir componente de clasificación al texto\n",
+    "\n",
+    "for label in df['label'].unique():# Añadir las etiquetas al clasificador\n",
+    "    textcat.add_label(label)#Se define al modelo las etiquetas que tiene que aprender"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 1, loss: {'textcat': 48.466898031778676}\n",
+      "epoch 2, loss: {'textcat': 18.74369011445231}\n",
+      "epoch 3, loss: {'textcat': 7.489699412099077}\n",
+      "epoch 4, loss: {'textcat': 4.481741377070969}\n",
+      "epoch 5, loss: {'textcat': 2.565714874927885}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from spacy.training import Example\n",
+    "\n",
+    "optimizer = nlp.begin_training() #Configuarar el entrenamiento\n",
+    "\n",
+    "for epoch in range(5):  # Número de episodios\n",
+    "    losses = {}\n",
+    "    for text, annotations in train_data:\n",
+    "        doc = nlp.make_doc(text)#solo convierte el texto en un formato que Spacy puede manejar\n",
+    "        example = Example.from_dict(doc, annotations)#Este objeto Example se usa para comparar las predicciones del modelo con las etiquetas reales y calcular la pérdida\n",
+    "        nlp.update([example], losses=losses)#Actualización de pesos del modelo\n",
+    "    print(f\"epoch {epoch + 1}, loss: {losses}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.785\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "     forward       0.92      0.96      0.94        25\n",
+      "        list       0.47      0.62      0.53        13\n",
+      "        read       0.88      0.67      0.76        21\n",
+      "       reply       1.00      0.93      0.97        15\n",
+      "        send       0.60      0.75      0.67        20\n",
+      "        star       0.92      0.85      0.88        13\n",
+      "       trash       0.79      0.70      0.75        27\n",
+      "  trash_list       0.81      0.96      0.88        23\n",
+      "     unknown       0.71      0.57      0.63        21\n",
+      "     untrash       0.82      0.82      0.82        22\n",
+      "\n",
+      "    accuracy                           0.79       200\n",
+      "   macro avg       0.79      0.78      0.78       200\n",
+      "weighted avg       0.80      0.79      0.79       200\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def predict(text):\n",
+    "    doc = nlp(text)#contendrá las probabilidades de clasificación \n",
+    "    return max(doc.cats, key=doc.cats.get)#doc.cats, probabilidad de cada label\n",
+    "#max devuelve el label con más probabilidad#key=doc.cats.get le dice a la función max cómo comparar los elementos del diccionario. En este caso, se usa el método get del diccionario para obtener los valores (probabilidades) asociados a cada clave (etiqueta).\n",
+    "\n",
+    "y_pred = [predict(text) for text in X_test]\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
+    "print(\"Classification Report:\\n\", classification_report(y_test, y_pred))"
    ]
   }
  ],
