--- a/S08_1_exercises_before.ipynb
+++ b/S08_1_exercises_before.ipynb
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1519,12 +1519,47 @@
     "    return max(doc.cats, key=doc.cats.get)#doc.cats, probabilidad de cada label\n",
     "#max devuelve el label con más probabilidad#key=doc.cats.get le dice a la función max cómo comparar los elementos del diccionario. En este caso, se usa el método get del diccionario para obtener los valores (probabilidades) asociados a cada clave (etiqueta).\n",
     "\n",
-    "y_pred = [predict(text) for text in X_test]\n",
+    "pred_spacy = [predict(text) for text in X_test]\n",
     "\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
     "\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "print(\"Classification Report:\\n\", classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compare"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Regex Classifier Accuracy: 0.444\n",
+      "Naive-Bayes Classifier Accuracy: 0.725\n",
+      "Spacy Classifier Accuracy: 0.785\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Regex Classifier Accuracy:\", accuracy_score(df['label'], df['predict']))\n",
+    "print(\"Naive-Bayes Classifier Accuracy:\", accuracy_score(y_test, predictions))\n",
+    "print(\"Spacy Classifier Accuracy:\", accuracy_score(y_test, pred_spacy))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Is better the Spacy because the high(and potential high because the 5 epoch that can be increased) precission and the capacity for capturing the relations on the text."
    ]
   }
  ],
