--- a/lab2/lab02.ipynb
+++ b/lab2/lab02.ipynb
@@ -22,6 +22,23 @@
     "from tensorflow.keras.utils import to_categorical\n",
     "from sklearn.metrics import classification_report, accuracy_score"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df = pd.read_csv('sent_train.csv')  \n",
+    "valid_df = pd.read_csv('sent_valid.csv')  "
+   ]
   }
  ],
  "metadata": {
