--- a/lab2/lab02.ipynb
+++ b/lab2/lab02.ipynb
@@ -39,6 +39,52 @@
     "train_df = pd.read_csv('sent_train.csv')  \n",
     "valid_df = pd.read_csv('sent_valid.csv')  "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Librerias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.stem import WordNetLemmatizer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Extraer tweets y labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_tweets = train_df['tweet'].astype(str).values  # Convert all elements into text chains, asuring all tweets are in text format\n",
+    "train_labels = train_df['label'].values\n",
+    "valid_tweets = valid_df['tweet'].astype(str).values  \n",
+    "valid_labels = valid_df['label'].values"
+   ]
   }
  ],
  "metadata": {
