--- a/lab2/lab02.ipynb
+++ b/lab2/lab02.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Librerias"
+    "Libreries"
    ]
   },
   {
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Extraer tweets y labels"
+    "Extract tweets and labels"
    ]
   },
   {
@@ -85,6 +85,36 @@
     "valid_tweets = valid_df['tweet'].astype(str).values  \n",
     "valid_labels = valid_df['label'].values"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Label into number format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_mapping = {\"LABEL_0\": 0, \"LABEL_1\": 1, \"LABEL_2\": 2}\n",
+    "train_labels = np.array([label_mapping[label] for label in train_labels])\n",
+    "valid_labels = np.array([label_mapping[label] for label in valid_labels])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
