--- a/lab2/lab021.ipynb
+++ b/lab2/lab021.ipynb
@@ -176,6 +176,36 @@
         "y_train = to_categorical(y_train, num_classes=3)\n",
         "y_valid = to_categorical(y_valid, num_classes=3)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## LSTM building"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\manue\\Anaconda\\Lib\\site-packages\\keras\\src\\layers\\core\\embedding.py:90: UserWarning: Argument `input_length` is deprecated. Just remove it.\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ],
+      "source": [
+        "model = Sequential([\n",
+        "    Embedding(input_dim=5000, output_dim=128, input_length=max_length),\n",
+        "    SpatialDropout1D(0.2),\n",
+        "    LSTM(100, dropout=0.2, recurrent_dropout=0.2),\n",
+        "    Dense(3, activation='softmax')\n",
+        "])"
+      ]
     }
   ],
   "metadata": {
