--- a/lab2/lab021.ipynb
+++ b/lab2/lab021.ipynb
@@ -226,14 +226,55 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
+      "source": [
+        "## Train model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/5\n",
+            "\u001b[1m150/150\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 30ms/step - accuracy: 0.6322 - loss: 0.9193 - val_accuracy: 0.6558 - val_loss: 0.8812\n",
+            "Epoch 2/5\n",
+            "\u001b[1m150/150\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 32ms/step - accuracy: 0.6494 - loss: 0.8936 - val_accuracy: 0.6558 - val_loss: 0.8858\n",
+            "Epoch 3/5\n",
+            "\u001b[1m150/150\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 28ms/step - accuracy: 0.6427 - loss: 0.9000 - val_accuracy: 0.6558 - val_loss: 0.8791\n",
+            "Epoch 4/5\n",
+            "\u001b[1m150/150\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 33ms/step - accuracy: 0.6523 - loss: 0.8851 - val_accuracy: 0.6558 - val_loss: 0.8785\n",
+            "Epoch 5/5\n",
+            "\u001b[1m150/150\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 31ms/step - accuracy: 0.6364 - loss: 0.9078 - val_accuracy: 0.6558 - val_loss: 0.8795\n"
+          ]
+        }
+      ],
+      "source": [
+        "history = model.fit(X_train, y_train, epochs=5, batch_size=64, validation_data=(X_valid, y_valid))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Evaluate"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "y_pred = model.predict(X_valid)\n",
+        "y_pred_classes = np.argmax(y_pred, axis=1)\n",
+        "y_true_classes = np.argmax(y_valid, axis=1)\n",
+        "\n",
+        "print(classification_report(y_true_classes, y_pred_classes, target_names=sentiments.values()))"
+      ]
     }
   ],
   "metadata": {
