--- a/lab2/lab021.ipynb
+++ b/lab2/lab021.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 43,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 44,
       "metadata": {
         "id": "7ClOMgfEMkjs"
       },
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 45,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -83,20 +83,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "def clean_text(text):\n",
         "    text = text.lower()  \n",
-        "    text = re.sub(r'http\\S+', '', text)  \n",
-        "    text = re.sub(r'[^a-zA-Z\\s]', '', text) \n",
+        "    text = re.sub(r'http\\S+', '', text)  #delete urls\n",
+        "    text = re.sub(r'[^a-zA-Z\\s]', '', text) #delete spacial characters\n",
         "    return text.strip()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 47,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -113,7 +113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -133,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 49,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 50,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -169,7 +169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 51,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 52,
       "metadata": {},
       "outputs": [
         {
@@ -201,8 +201,9 @@
       "source": [
         "model = Sequential([\n",
         "    Embedding(input_dim=5000, output_dim=128, input_length=max_length),\n",
-        "    SpatialDropout1D(0.2),\n",
-        "    LSTM(100, dropout=0.2, recurrent_dropout=0.2),\n",
+        "    SpatialDropout1D(0.1),\n",
+        "    LSTM(200, return_sequences=True, dropout=0.1),  # LSTM aditional layer\n",
+        "    LSTM(100, dropout=0.1),\n",
         "    Dense(3, activation='softmax')\n",
         "])"
       ]
@@ -216,7 +217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 53,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -232,28 +233,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 54,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Epoch 1/5\n",
-            "\u001b[1m150/150\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 30ms/step - accuracy: 0.6322 - loss: 0.9193 - val_accuracy: 0.6558 - val_loss: 0.8812\n",
-            "Epoch 2/5\n",
-            "\u001b[1m150/150\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 32ms/step - accuracy: 0.6494 - loss: 0.8936 - val_accuracy: 0.6558 - val_loss: 0.8858\n",
-            "Epoch 3/5\n",
-            "\u001b[1m150/150\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 28ms/step - accuracy: 0.6427 - loss: 0.9000 - val_accuracy: 0.6558 - val_loss: 0.8791\n",
-            "Epoch 4/5\n",
-            "\u001b[1m150/150\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 33ms/step - accuracy: 0.6523 - loss: 0.8851 - val_accuracy: 0.6558 - val_loss: 0.8785\n",
-            "Epoch 5/5\n",
-            "\u001b[1m150/150\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 31ms/step - accuracy: 0.6364 - loss: 0.9078 - val_accuracy: 0.6558 - val_loss: 0.8795\n"
+            "Epoch 1/10\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\u001b[1m150/150\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 65ms/step - accuracy: 0.6248 - loss: 0.9351 - val_accuracy: 0.6558 - val_loss: 0.8788\n",
+            "Epoch 2/10\n",
+            "\u001b[1m150/150\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 66ms/step - accuracy: 0.6473 - loss: 0.8923 - val_accuracy: 0.6558 - val_loss: 0.8787\n",
+            "Epoch 3/10\n",
+            "\u001b[1m150/150\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 64ms/step - accuracy: 0.6385 - loss: 0.9034 - val_accuracy: 0.6558 - val_loss: 0.8799\n",
+            "Epoch 4/10\n",
+            "\u001b[1m150/150\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 69ms/step - accuracy: 0.6417 - loss: 0.8997 - val_accuracy: 0.6558 - val_loss: 0.8790\n",
+            "Epoch 5/10\n",
+            "\u001b[1m150/150\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 68ms/step - accuracy: 0.6521 - loss: 0.8866 - val_accuracy: 0.6558 - val_loss: 0.8796\n",
+            "Epoch 6/10\n",
+            "\u001b[1m150/150\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 70ms/step - accuracy: 0.6409 - loss: 0.8993 - val_accuracy: 0.6558 - val_loss: 0.8817\n",
+            "Epoch 7/10\n",
+            "\u001b[1m150/150\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 72ms/step - accuracy: 0.6463 - loss: 0.8933 - val_accuracy: 0.6558 - val_loss: 0.8789\n",
+            "Epoch 8/10\n",
+            "\u001b[1m150/150\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 69ms/step - accuracy: 0.6502 - loss: 0.8883 - val_accuracy: 0.6558 - val_loss: 0.8800\n",
+            "Epoch 9/10\n",
+            "\u001b[1m150/150\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 70ms/step - accuracy: 0.6509 - loss: 0.8863 - val_accuracy: 0.6558 - val_loss: 0.8793\n",
+            "Epoch 10/10\n",
+            "\u001b[1m150/150\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 70ms/step - accuracy: 0.6495 - loss: 0.8787 - val_accuracy: 0.6679 - val_loss: 0.8399\n"
           ]
         }
       ],
       "source": [
-        "history = model.fit(X_train, y_train, epochs=5, batch_size=64, validation_data=(X_valid, y_valid))"
+        "history = model.fit(X_train, y_train, epochs=10, batch_size=64, validation_data=(X_valid, y_valid))"
       ]
     },
     {
@@ -265,9 +282,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\u001b[1m75/75\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 19ms/step\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "     Bearish       0.00      0.00      0.00       347\n",
+            "     Bullish       0.39      0.28      0.32       475\n",
+            "     Neutral       0.71      0.93      0.81      1566\n",
+            "\n",
+            "    accuracy                           0.67      2388\n",
+            "   macro avg       0.37      0.40      0.38      2388\n",
+            "weighted avg       0.55      0.67      0.59      2388\n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\manue\\Anaconda\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1469: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n",
+            "c:\\Users\\manue\\Anaconda\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1469: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n",
+            "c:\\Users\\manue\\Anaconda\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1469: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n"
+          ]
+        }
+      ],
       "source": [
         "y_pred = model.predict(X_valid)\n",
         "y_pred_classes = np.argmax(y_pred, axis=1)\n",
