--- a/lab2/lab021.ipynb
+++ b/lab2/lab021.ipynb
@@ -322,6 +322,13 @@
         "\n",
         "print(classification_report(y_true_classes, y_pred_classes, target_names=sentiments.values()))"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "For better metrics I will change the parameters increasing the LSTM units adding more layes or adjusting the dropout for excessive looss"
+      ]
     }
   ],
   "metadata": {
