--- a/lab2/lab021 copy.ipynb
+++ b/lab2/lab021 copy.ipynb
@@ -113,14 +113,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "tokenizer = Tokenizer(num_words=5000, oov_token=\"<OOV>\")\n",
-        "tokenizer.fit_on_texts(df_train['text'])\n",
+        "tokenizer = Tokenizer(num_words=5000, oov_token=\"<OOV>\")#Tokenizar las 5000 palabras mas frecuentes del texto, el resto se ignoran, y si no estan se ponen con el 00v\n",
+        "tokenizer.fit_on_texts(df_train['text'])#Construye un vocabulario basado en la frecuencias del texto.\n",
         "\n",
-        "X_train = tokenizer.texts_to_sequences(df_train['text'])\n",
+        "X_train = tokenizer.texts_to_sequences(df_train['text'])#Convierte el texto en secuencias de números\n",
         "X_valid = tokenizer.texts_to_sequences(df_valid['text'])"
       ]
     },
@@ -137,8 +137,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "max_length = 50\n",
-        "X_train = pad_sequences(X_train, maxlen=max_length, padding='post')\n",
+        "max_length = 50 #Distancia máxima despues del padding\n",
+        "X_train = pad_sequences(X_train, maxlen=max_length, padding='post')#lista de indices a una longitud fija despues de las secuencias\n",
         "X_valid = pad_sequences(X_valid, maxlen=max_length, padding='post')"
       ]
     },
@@ -151,12 +151,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "label_encoder = LabelEncoder()\n",
-        "y_train = label_encoder.fit_transform(df_train['label'])\n",
+        "label_encoder = LabelEncoder()#librería para converir etiquetas categóricas en numeros enteros\n",
+        "y_train = label_encoder.fit_transform(df_train['label'])#Convierte las etiquetas en números ej: Bearish -> 0\n",
         "y_valid = label_encoder.transform(df_valid['label'])"
       ]
     },
